Update source files to kicad 6

--- a/hardware/kicad/ft231x_uart_usb_power_switch/Makefile
+++ b/hardware/kicad/ft231x_uart_usb_power_switch/Makefile
@@ -4,7 +4,7 @@ MAK=kibot.mak
 NAME=$(notdir $(CURDIR))
 PCB=${NAME}.kicad_pcb
 CONFIG=${NAME}.kibot.yaml
-SCH=${NAME}.sch
+SCH=${NAME}.kicad_sch
 DEST=fabrication
 
 all: erc_and_fab drc_and_fab
