--- a/hardware/kicad/ft231x_uart_usb_power_switch/ft231x_uart_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_uart_usb_power_switch/ft231x_uart_usb_power_switch.kibot.yaml
@@ -251,7 +251,7 @@ outputs:
       separate_files_for_front_and_back: true
       only_smd: true
 
-  - name: 'position'
+  - name: 'positionjlc'
     comment: "Pick and place file, JLC style"
     type: position
     dir: Position
