--- a/.github/workflows/ft231x_uart_usb_power_switch.yml
+++ b/.github/workflows/ft231x_uart_usb_power_switch.yml
@@ -39,7 +39,7 @@ jobs:
 
   DRC:
     runs-on: ubuntu-latest
-    container: setsoft/kicad_auto:latest
+    container: setsoft/kicad_auto:dev_k6
     needs: ERC
 
     steps:
@@ -58,7 +58,7 @@ jobs:
   FabSch:
     name: Schematic fabrication files
     runs-on: ubuntu-latest
-    container: setsoft/kicad_auto:latest
+    container: setsoft/kicad_auto:dev_k6
     needs: ERC
 
     steps:
